--- a/package.json
+++ b/package.json
@@ -1,58 +1,24 @@
 {
   "name": "ui_pharmacy",
   "version": "1.0.0",
-  "private": true,
-  "keywords": [
-    "UI",
-    "React",
-    "MaterialUI"
-  ],
-  "author": "Aleksey Denisiuk aka KoD",
-  "license": "ISC",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alekseyKoD/ui_pharmacy.git"
   },
-  "description": "Rурсовой проект по дисциплине Проектирование UI",
-  "main": "index.js",
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@fontsource/roboto": "^4.5.8",
-    "@material-ui/core": "^5.0.0-beta.5",
-    "@material-ui/icons": "^4.11.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-jss": "^10.10.0",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+  "keywords": [
+    "React",
+    "UI",
+    "MaterialUI"
+  ],
+  "author": "Aleksei (KoD)",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alekseyKoD/ui_pharmacy/issues"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "homepage": "https://github.com/alekseyKoD/ui_pharmacy#readme"
 }
