--- a/kurs/package.json
+++ b/kurs/package.json
@@ -17,6 +17,7 @@
     "react-jss": "^10.10.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-svg-inline": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
